# GoogleTest

./: CMakeLists.txt  main.cpp
cmake/: FindGMock.cmake
mocks/: 1.1.abstractclass.cpp  1.2.templateclass.cpp  2.1.defaultvalues.cpp  2.2.1.userdefinedtype.cpp  2.2.matchers.cpp  2.3.cardinality.cpp  2.4.actions.cpp  2.5.expectationorder.cpp
src/: cut.cpp  cut.h
tests/: 0.1.globalsetup.cpp  1.1.simpletests.cpp  1.2.fixtures.cpp  1.3.skiptest.cpp  1.4.parameterizedtests.cpp  1.5.parameterizedtestswithfixture.cpp  1.6.typedtests.cpp  1.7.typedparameterizedtests.cpp  2.1.assertations.cpp  2.2.assertationscustom.cpp  2.3.deadtests.cpp  3.1.extendprinter.cpp  3.2.logging.cpp
